[package]
name = "zonys-core"
version = "0.0.0"
edition = "2021"

[dependencies]
flate2 = "*"
freebsd = { path = "../freebsd" }
jail = { path = "../jail" }
liquid = { version = "0.26" }
nix = { version = "0.24", features = ["fs"] }
postcard = { version = "1", features = ["alloc"] }
regex = { version = "1" }
reqwest = { version = "*", features = ["gzip", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "*"
tar = "*"
tempfile = "*"
uuid = { version = "*", features = ["v4", "serde"] }
xz2 = "*"
zfs = { path = "../zfs" }
