[package]
name = "zonys-core"
version = "0.0.0"
edition = "2021"

[dependencies]
byteorder = "1"
flate2 = "*"
freebsd = { path = "../freebsd" }
jail = { path = "../jail" }
liquid = { version = "0.26" }
nix = { version = "0.26", features = ["fs", "mount"] }
postcard = { version = "1", features = ["alloc"] }
regex = { version = "1" }
reqwest = { version = "*", features = ["gzip", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "*"
tar = "*"
tempfile = "*"
url = { version = "2" }
uuid = { version = "*", features = ["v4", "serde"] }
xz2 = "*"
zfs = { path = "../zfs" }
ztd = { git = "https://github.com/Stazer/ztd.git", branch = "main" }
